--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,8 @@ jobs:
         run: mkdocs build --clean --verbose --site-dir _site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: _site/
 
   deploy:
     environment:
