--- a/config/v2-05-11-2025/printer/heads/head0/mainhead.cfg
+++ b/config/v2-05-11-2025/printer/heads/head0/mainhead.cfg
@@ -53,7 +53,8 @@ spi_bus: spi1
 rtd_nominal_r: 100
 rtd_reference_r: 430
 rtd_num_of_wires: 2
-min_temp: -50
+min_temp: 10
+#min_temp: -50
 max_temp: 300
 
 [tmc2209 extruder]
