--- a/config/v2-05-11-2025/printer/macros/probing.cfg
+++ b/config/v2-05-11-2025/printer/macros/probing.cfg
@@ -23,3 +23,10 @@ gcode:
         # Make a note of the last bed temp used when creating the mesh
         SET_GCODE_VARIABLE MACRO=G32 VARIABLE=meshbedtemp VALUE="{printer.heater_bed.target|float}"        
     {% endif %}
+
+[gcode_macro PROBE_SINGLE]
+description: Probe a single point for manual bed leveling
+gcode:
+   _HOME_IF_NEEDED 
+   PROBE
+   G0 Z10
