--- a/config/v2-05-11-2025/printer/mainboard/bed.cfg
+++ b/config/v2-05-11-2025/printer/mainboard/bed.cfg
@@ -2,6 +2,12 @@
 # Bed Heater
 #####################################################################
 
+# TODO Check bed temp with thermometer
+# TODO Adjust Max Power so your heater doesn't warp your bed. Rule of thumb is 0.4 watts / cm^2 .
+# Formula: (350 * 350/100) * 750) * 100) / 0.4)) / 100 = 0.65
+# max_power: 0.65
+# TODO rerun PID calibration
+
 [heater_bed]
 heater_pin: PC9
 sensor_type: ATC Semitec 104GT-2
